# price_formation_tce

./: .gitignore  README.md  pyproject.toml
price_formation_tce/: Home.py  streamlit_test.py
price_formation_tce/pages/: 1_Formacao_de_Precos.py  2_Carregar_Documento.py
